--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ github_username:  SkyW4lk3r919
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-minimal
+theme: minima
